# GPTrader

./: .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
gptrader/: __init__.py  __main__.py  config.py  http.py  models.py  orchestrator.py
gptrader/ai/: evaluator.py
gptrader/risk/: contract_score.py
gptrader/scrapers/: letsbonk.py  meteora.py  pumpfun.py
gptrader/social/: twitter.py
gptrader/trade/: jupiter_stub.py
tests/: test_ai_disabled.py  test_config.py  test_twitter.py
