[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptrader"
version = "0.1.0"
description = "Async Solana token discovery and evaluation bot"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GPTrader" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["gptrader*"]


